# mcp-tutor

./: .gitignore  README.md  plan.md  pyproject.toml
.cursor/: mcp.json
course_content_agent/: README.md  about.md  content_extraction copy.py  content_extraction.py  main.py  models.py  modules.py  signatures.py  test.py
course_output/advanced/: 00_welcome.md  99_conclusion.md  course_info.json
course_output/advanced/module_01/: 01_intro.md  02_main.md  03_conclusion.md  05_summary.md
course_output/advanced/module_02/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/advanced/module_03/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/advanced/module_04/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/advanced/module_05/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/advanced/module_06/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/advanced/module_07/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/: 00_welcome.md  99_conclusion.md  course_info.json
course_output/beginner/module_01/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_02/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_03/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_04/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_05/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_06/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_07/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
course_output/beginner/module_08/: 01_intro.md  02_main.md  03_conclusion.md  04_assessments.md  05_summary.md
docs/: 0.overall-vision.md  1.focused-example.md  2.course_content_agent.md  mcp-course-integration-plan.md
logs/: .gitignore
mastra/: how.md
mcp_client/: __init__.py  main.py
mcp_server/: __init__.py  about.md  content_processing.py  course_management.py  course_tools.py  logging_config.py  main.py  models.py  prompts.py  stdio_client.py  tools.py  user_management.py
nbs/: content-generation.ipynb  dspy-08072025.ipynb  dspy.ipynb  ingestion-chunking.ipynb  mcp-server.ipynb  test-tutor-agent.ipynb
rag_course_content_agent/: main.py  managers.py  models.py  modules.py  signatures.py  utils.py
tests/: test_refactor.py  test_server.py  test_tutor_agent.py
tutor_agent/: __init__.py  main.py
tutor_agent/deprecated/: main.py
