[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-educational-tutor"
version = "0.1.0"
description = "MCP Educational Tutoring System with document-level preparation and AI agent capabilities"
authors = [
    {name = "Arshath", email = "marshath@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core MCP dependencies
    "mcp>=1.0.0",
    # Data validation and models
    "pydantic>=2.0.0",
    # AI/ML libraries for tutoring agent
    "dspy-ai>=2.4.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "uv>=0.7.17",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "course_content_agent"]